--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles.css">
-  <script defer src="./script.js"></script>
+  <script src="./config.js" type="module"></script>
+  <script defer src="./script.js" type="module"></script>
   <title>Document</title>
 </head>
 
